
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct sockaddr {int dummy; } ;
struct TYPE_3__ {int s_addr; } ;
struct TYPE_4__ {int sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bzero (int *,int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int perror (char*) ;
 TYPE_2__ plm ;
 int port ;
 int printf (char*,char*) ;
 int socket (int ,int ,int ) ;

int conn(char *ip)
{
 int sockfd;
 plm.sin_family = AF_INET;
 plm.sin_port = htons(port);
 plm.sin_addr.s_addr = inet_addr(ip);
 bzero(&(plm.sin_zero),8);
 sockfd = socket(AF_INET,SOCK_STREAM,0);
if((connect(sockfd,(struct sockaddr *)&plm,sizeof(struct sockaddr))) < 0)
{
 perror("[-] connect error!");
 exit(0);
}
 printf("[*] Connected to: %s.\n",ip);
 return sockfd;
}
